# StudleyWinfield2016

./: README.md
DEAP/: custom.py  evaluate  main.py  params.py  playback  primitives.py  studley-winfield.py  utilities.py
argos3/controllers/: CMakeLists.txt
argos3/controllers/footbot_sw2016/: CBlackBoard.cpp  CBlackBoard.h  CMakeLists.txt  CNode.cpp  CNode.h  footbot_sw2016.cpp  footbot_sw2016.h
argos3/experiments/: sw2016.argos  sw2016_playback.argos
argos3/loop_functions/: CMakeLists.txt
argos3/loop_functions/sw2016_loop_functions/: CMakeLists.txt  sw2016_loop_functions.cpp  sw2016_loop_functions.h
